# mother

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  rustfmt.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
crates/mother-cli/: Cargo.toml
crates/mother-cli/src/: lib.rs  main.rs  types.rs
crates/mother-cli/src/commands/: diff.rs  mod.rs  query.rs  scan.rs  types.rs
crates/mother-cli/src/commands/diff/: mod.rs  run.rs
crates/mother-cli/src/commands/diff/tests/: mod.rs  tests_run.rs
crates/mother-cli/src/commands/query/: mod.rs  run.rs
crates/mother-cli/src/commands/query/tests/: mod.rs  tests_run.rs
crates/mother-cli/src/commands/scan/: mod.rs  phase1.rs  phase2.rs  phase3.rs
crates/mother-cli/src/commands/scan/phase1/: mod.rs
crates/mother-cli/src/commands/scan/phase1/tests/: mod.rs  tests_handle_file_result.rs  tests_phase1_result.rs  tests_run.rs
crates/mother-cli/src/commands/scan/phase3/: mod.rs
crates/mother-cli/src/commands/scan/phase3/tests/: mod.rs  tests_build_symbol_lookup.rs  tests_edge_creation.rs  tests_find_containing_symbol.rs  tests_process_symbol_references.rs  tests_reference_edge_logic.rs  tests_reference_mapping.rs  tests_run.rs
crates/mother-cli/src/commands/scan/tests/: mod.rs  tests_connect_neo4j.rs  tests_create_scan_run.rs  tests_execute_scan.rs  tests_log_scan_run_info.rs  tests_log_scan_summary.rs  tests_run.rs  tests_shutdown_lsp.rs
crates/mother-cli/src/tests/: mod.rs  tests_setup_logging.rs
crates/mother-cli/tests/: tests_main.rs  tests_run.rs
crates/mother-core/: Cargo.toml
crates/mother-core/examples/: debug_sysml_references.rs  test_sysml_references.rs  tests_sysml_references.rs
crates/mother-core/src/: lib.rs
crates/mother-core/src/graph/: convert.rs  mod.rs  model.rs  neo4j.rs
crates/mother-core/src/graph/queries/: file.rs  mod.rs  read.rs  scan.rs  symbol.rs
crates/mother-core/src/graph/tests/: mod.rs  tests_model.rs  tests_neo4j.rs  tests_neo4j_client.rs  tests_neo4jconfig.rs
crates/mother-core/src/lsp/: client.rs  convert.rs  manager.rs  mod.rs  requests.rs  state.rs  types.rs
crates/mother-core/src/lsp/tests/: mod.rs  tests_client.rs  tests_manager.rs  tests_state_clientstate.rs  tests_types.rs
crates/mother-core/src/scanner/: language.rs  mod.rs  run.rs  walker.rs
crates/mother-core/src/scanner/tests/: mod.rs  tests_language.rs  tests_run.rs  tests_walker.rs
crates/mother-core/src/version/: mod.rs  scan_run.rs
crates/mother-core/src/version/tests/: mod.rs  tests_scan_run.rs
crates/mother-core/tests/: lsp_integration.rs  placeholder.rs
crates/remember-cli/: Cargo.toml
crates/remember-cli/src/: main.rs
crates/remember-cli/src/commands/: mod.rs  query.rs  scan.rs
crates/remember-core/: Cargo.toml
crates/remember-core/src/: lib.rs
crates/remember-core/src/graph/: mod.rs  model.rs  neo4j.rs
crates/remember-core/src/lsp/: client.rs  manager.rs
crates/remember-core/src/lsp/tests/: mod.rs  tests_types.rs
crates/remember-core/src/scanner/: mod.rs  walker.rs
crates/remember-core/src/scanner/tests/: tests_language.rs
docs/: test-coverage-phase2-collect-symbol-info.md
scripts/: test.sh
