[package]
name = "mother-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the mother AST graph ingestion tool"

[lib]
name = "mother_cli"
path = "src/lib.rs"

[[bin]]
name = "mother"
path = "src/main.rs"

[dependencies]
mother-core = { path = "../mother-core" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
