[package]
name = "mother-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for semantic graph ingestion via LSP"

[dependencies]
# Neo4j
neo4rs.workspace = true
tokio.workspace = true

# LSP
async-lsp.workspace = true
tower.workspace = true
async-process.workspace = true

# Utilities
walkdir.workspace = true
ignore.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
git2.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
